@@ -1,6 +1,8 @@
 Revision history for Mojolicious-Plugin-OpenAPI-Modern
 
 {{$NEXT}}
+          - bump dependency on OpenAPI::Modern for new features and
+            for compatibility in test results
 
 0.003     2022-06-08 02:25:56Z
           - test fixes for error messages that changed
